--- a/usrsctplib/CMakeLists.txt
+++ b/usrsctplib/CMakeLists.txt
@@ -67,6 +67,11 @@ check_include_file(netinet/ip_icmp.h HAVE_NETINET_IP_ICMP_H)
 check_function_exists("socket" HAVE_SOCKET)
 check_function_exists("inet_addr" HAVE_INET_ADDR)
 
+check_function_exists("IN6_ARE_ADDR_EQUAL" HAVE_IN6_ARE_ADDR_EQUAL)
+if(HAVE_IN6_ARE_ADDR_EQUAL)
+    add_definitions(-DHAVE_IN6_ARE_ADDR_EQUAL)
+endif()
+
 add_definitions(-D__Userspace__)
 add_definitions(-D__Userspace_os_${CMAKE_SYSTEM_NAME})
 add_definitions(-D_GNU_SOURCE)
@@ -227,10 +232,14 @@ LIST (APPEND usrsctp_SOURCES
 add_library(usrsctp SHARED ${usrsctp_SOURCES} ${usrsctp_HEADERS})
 add_library(usrsctp-static STATIC ${usrsctp_SOURCES} ${usrsctp_HEADERS})
 
+if(MINGW)
+    SET (MINGW_IPHLAPI "iphlpapi")
+endif()
+
 if(WIN32)
-	message(STATUS "link library: ws2_32")
-	target_link_libraries(usrsctp ws2_32)
-	target_link_libraries(usrsctp-static ws2_32)
+	message(STATUS "link library: ws2_32 ${MINGW_IPHLAPI}")
+	target_link_libraries(usrsctp ws2_32 ${MINGW_IPHLAPI})
+	target_link_libraries(usrsctp-static ws2_32 ${MINGW_IPHLAPI})
 endif()
 
 SET_TARGET_PROPERTIES (usrsctp-static PROPERTIES OUTPUT_NAME "usrsctp")
@@ -241,7 +250,7 @@ SET_TARGET_PROPERTIES (usrsctp PROPERTIES SOVERSION 1 VERSION 1.0.0)
 IF ("x${CMAKE_C_COMPILER_ID}" STREQUAL "xClang" OR "x${CMAKE_C_COMPILER_ID}" STREQUAL "xGNU")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic -Wall -std=c99")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -std=c99")
-	if (WERROR)
+	if (WERROR AND NOT MINGW)
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
 	endif()
